# polars-fluvius

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: sample_sandbox.py
src/polars_fluvius/: __init__.py
src/polars_fluvius/converters/: __init__.py  energy_converter.py  mandates_converter.py
src/polars_fluvius/datasources/: __init__.py  energy.py  mandates.py
src/polars_fluvius/models/: __init__.py  energy_measurement.py
src/polars_fluvius/readers/: __init__.py  energy_reader.py  mandates_reader.py
src/polars_fluvius/schemas/: __init__.py  energy_schema.py  mandates_schema.py
src/polars_fluvius/utils/: __init__.py  credentials.py
tests/: conftest.py  test_energy_datasource.py  test_energy_measurement.py  test_integration.py  test_mandates_datasource.py
