[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polars-fluvius"
version = "0.2.2"
description = "Polars IO source for Fluvius Energy API"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "Ward Schodts" }
]
keywords = ["polars", "fluvius", "energy", "api", "io-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "polars>=1.10.0",
    "fluvius-energy-api>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/warreee/polars-fluvius"
Repository = "https://github.com/warreee/polars-fluvius"
Issues = "https://github.com/warreee/polars-fluvius/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polars_fluvius"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: hits real Fluvius sandbox API (requires credentials and allow-listed IP)",
]